--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 header{
     width: 100%;
     height: 50px;
+    margin-bottom: 2em;
 }
 header .logo{
     width: 50px;
@@ -38,6 +39,11 @@ header .caixa{
     padding: 5px;
     border-radius: 10px;
 }
+
+
+/* CADASTRO */
+
+
 .titulo_p{
     padding: 3em 0 1em 0;
     text-align: center;
@@ -82,3 +88,55 @@ select{
     padding: 5px;
     border-radius: 10px;
 }   
+
+
+/* PERFIL */
+
+
+.perfil1 img{
+    width: 5em;
+    border-radius: 100px;
+    padding: 1em;
+    background-color: rgb(219, 218, 218);
+}
+.perfil1 h2{
+    background-color: rgb(219, 218, 218);
+    padding: 0.5em;
+    border-radius: 20px;
+
+}
+.perfil1{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1em;
+}
+.perfil2{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.nasci{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+
+    background-color: rgb(219, 218, 218);
+    border-radius: 20px;
+    padding: 0.8em;
+}
+.sobre p, .nasci p{
+    font-size: 1.2em;
+}
+.sobre{
+    width: 100%;
+    background-color: rgb(219, 218, 218);
+    border-radius: 20px;
+    padding: 1.5em;
+}
+
+
