--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    font-family: 'Titillium Web', sans-serif;
+}
 .container{
     width: 425px;
 }
@@ -15,6 +18,7 @@ header{
     width: 100%;
     height: 50px;
     margin-bottom: 2em;
+    
 }
 header .logo{
     width: 50px;
@@ -38,6 +42,58 @@ header .caixa{
     background-color: #FB91FF;
     padding: 5px;
     border-radius: 10px;
+}
+.rodape{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    border: solid 1px #000000;
+}
+.div1 a, .div2 a{
+    font-size: 13px;
+    padding-bottom: 0.5em;
+}
+.div1{
+    width: 33%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+}
+.div1 a{
+    color: #000000;
+    text-decoration: none;
+}
+.div2{
+    width: 33%;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+
+}
+.div2 a{
+    color: #000000;
+    text-decoration: none;
+}
+.logoimg{
+    width: 33%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.rodape .logo{
+    width: 5em;
+}
+.rodape img{
+    width: 1.5em;
+}
+.rodape2{
+    text-align: center;
+    border: solid 1px #000000;
+}
+footer{
+    margin-top: 2em;
 }
 
 
