--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ header .caixa{
 }
 .linha{
     background: #A4CBFF;
-    width: ;
     height: 5px;
 }
 .caixa{
@@ -51,19 +50,21 @@ header .caixa{
     display: flex;
     width: ;
 }
-.card img{
+.banner img{
     width: 200px;
     display: flex;   
     border-radius: 10px;
-    box-shadow: black;
+    box-shadow: 10px 10px 10px #707070
 }
 .card{
     display: flex;
     text-decoration: none;
     justify-content: center;
     width: 80%;
-    margin: 50px;
+    margin: 20px;
     padding: 20px;
+    margin-bottom: 50px;
+    text-align: center;
        
 }
 .card a{
@@ -79,9 +80,10 @@ header .caixa{
 }
 .texto{
     text-decoration: none;
-    padding: 10px;
+    padding: 0px 10px;
     justify-content: center;
     height: 50px;
+    text-align: center;
 
 }
 .texto li{
@@ -90,11 +92,9 @@ header .caixa{
 }
 .flex2 img{
     width: 50px;
-    padding: px;
 }
 .rodape{
     display: flex;
-    padding: ;
     width: 100%;
     justify-content: space-between;
 }
@@ -115,14 +115,127 @@ footer p{
     justify-content: flex-end;
 
 }
-.profile{
-    width: 50px;
-    height: 50px;
-}
+
 .preto{
     background: #000;
     width: 250px;
     height: 40px;
 }
 
+.rodape{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    border: solid 1px #000000;
+}
+.div1 a, .div2 a{
+    font-size: 13px;
+    padding-bottom: 0.5em;
+}
+.div1{
+    width: 33%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 
+}
+.div1 a{
+    color: #000000;
+    text-decoration: none;
+}
+.div2{
+    width: 33%;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+
+}
+.div2 a{
+    color: #000000;
+    text-decoration: none;
+}
+.logoimg{
+    width: 33%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.rodape .logo{
+    width: 5em;
+}
+.rodape img{
+    width: 1.5em;
+}
+.rodape2{
+    text-align: center;
+    border: solid 1px #000000;
+}
+footer{
+    margin-top: 1em;
+}
+.profile{
+    height: 50px;
+    margin: 0px 20px
+}
+ul{
+    list-style-type: none;
+}
+main{
+    height: 650px;
+    
+}
+.side{
+    margin: 0px 0px;
+}
+.how{
+    margin-left: -0px;
+}
+
+
+
+
+
+
+ 
+/* Fim media 425px */
+
+@media screen and (min-width: 768px){
+    .flex1{
+        margin: 0px 150px;
+    }
+    .rodape{
+        width: 730px;
+    }
+    .rodape2{
+        width: 730px;
+    }
+    .leo{
+        margin: 0px 20px;
+    }
+    .linha{
+        width: 750px;
+    }
+    .mov{
+        margin: 0px 110px;
+    }  
+}
+/* Fim media 768px */
+
+@media screen and (min-width: 1366px){
+    .flex1{
+        margin: 0px 400px;
+    }
+    .linha{
+        width: 1310px;
+    }
+    .mik{
+        margin: 50px -5px;
+    }
+    .rodape{
+        width: 1310px;
+    }
+    .rodape2{
+       width: 1310px;
+    }
+}
