--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@
 .flex1{
     width: 100%;
     display: flex;
-    align-items: center;    
+    justify-content: space-around;    
     padding: 10px;
+}
+.options{
+    width: 50%;
 }
 header{
     width: 100%;
@@ -139,4 +142,494 @@ select{
     padding: 1.5em;
 }
 
+/* Começo Login */
+@media screen and (min-width: 425px){
+.titulo{
+display: flex;
+justify-content: center;
+text-transform: uppercase;
+padding-top: 3em;
+}
+.login{
+    width: 80%;
+    max-width: 400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    color: black;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    padding: 1.5em;
+    border-radius: 2em;
+    background-color: rgba(149, 187, 212, 0.527);
+    font-size: x-large;
+}
+.caixa2{
+    width: 70px;
+    height: 30px;
+    color: white;
+    text-decoration: none;
+    background-color: #FB91FF;
+    padding: 5px;
+    border-radius: 10px;
 
+}
+.gradient{
+    background-color: #FB91FF;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+}
+.btn{
+    color: white;
+    text-decoration: none;
+    font-size: x-large;
+    padding: 8px 12px;
+    border-radius: 10px;
+    margin-top: 7px;
+}
+.botao{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin: 0px 60px;
+    padding: 30px;
+}
+.semcadastro{
+    font-size: 15px;
+    margin: 0px 70px;
+}
+.rodape{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    border: solid 1px #000000;
+    margin-top: 290px;
+}
+.div1 a, .div2 a{
+    font-size: 13px;
+    padding-bottom: 0.5em;
+}
+.div1{
+    width: 33%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+}
+.div1 a{
+    color: #000000;
+    text-decoration: none;
+}
+.div2{
+    width: 33%;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+
+}
+.div2 a{
+    color: #000000;
+    text-decoration: none;
+}
+.logoimg{
+    width: 33%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.rodape .logo{
+    width: 5em;
+}
+.rodape img{
+    width: 1.5em;
+}
+.rodape2{
+    text-align: center;
+    border: solid 1px #000000;
+}
+footer{
+    margin-top: 2em;
+}
+}
+@media screen and (min-width: 768px){
+    .titulo{
+        display: flex;
+        justify-content: center;
+        text-transform: uppercase;
+        padding-top: 3em;
+        }
+    .login{
+        width: 100%;
+        max-width: 400px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        color: black;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        padding: 1.5em;
+        border-radius: 2em;
+        background-color: rgba(149, 187, 212, 0.527);
+        font-size: x-large;
+    }
+    .caixa2{
+        width: 70px;
+        height: 30px;
+        color: white;
+        text-decoration: none;
+        background-color: #FB91FF;
+        padding: 5px;
+        border-radius: 10px;
+    }
+    .gradient{
+        background-color: #FB91FF;
+        width: 150px;
+        display: flex;
+        justify-content: center;
+    }
+    .btn{
+        color: white;
+        text-decoration: none;
+        font-size: x-large;
+        padding: 8px 12px;
+        border-radius: 10px;
+        margin-top: 7px;
+    }
+    .botao{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        margin: 0px 90px;
+        padding: 30px;
+    }
+    .semcadastro{
+        font-size: 15px;
+        margin: 0px 100px;
+    }
+    .rodape{
+        width: 101%;
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        border: solid 1px #000000;
+        margin-top: 290px;
+    }
+    .div1 a, .div2 a{
+        font-size: 13px;
+        padding-bottom: 0.5em;
+    }
+    .div1{
+        width: 33%;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    .div1 a{
+        color: #000000;
+        text-decoration: none;
+    }
+    .div2{
+        width: 33%;
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
+        
+    }
+    .div2 a{
+        color: #000000;
+        text-decoration: none;
+    }
+    .logoimg{
+        width: 33%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .rodape .logo{
+        width: 5em;
+    }
+    .rodape img{
+        width: 1.5em;
+    }
+    .rodape2{
+        text-align: center;
+        border: solid 1px #000000;
+    }
+    footer{
+        margin-top: 2em;
+    }
+    .container{
+        width: 768px;
+    }
+    .flex1{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;    
+        padding: 10px;
+    }
+    header{
+        width: 100%;
+        height: 50px;
+        margin-bottom: 2em;
+    }
+    header .logo{
+        width: 50px;
+    }
+    header ul{
+        width: 100%;
+        list-style-type: none;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 10px;
+    }
+    
+    header ul img{
+        width: 20px;
+    }
+    header .caixa{
+        width: 50px;
+        height: 30px;
+        color: white;
+        text-decoration: none;
+        background-color: #FB91FF;
+        padding: 5px;
+        border-radius: 10px;
+    }
+    .container{
+        width: 768px;
+    }
+    .flex1{
+        width: 100%;
+        display: flex;
+        align-items: center;    
+        padding: 10px;
+    }
+    header{
+        width: 100%;
+        height: 50px;
+        margin-bottom: 2em;
+    }
+    header .logo{
+        width: 70px;
+    }
+    header ul{
+        width: 100%;
+        list-style-type: none;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px;
+    }
+    header ul img{
+        width: 25px;
+    }
+    header .caixa{
+        width: 70px;
+        height: 60px;
+        color: white;
+        text-decoration: none;
+        background-color: #FB91FF;
+        padding: 10px;
+        border-radius: 10px;
+    }
+}
+@media screen and (min-width: 1366px){
+    .titulo{
+        display: flex;
+        justify-content: center;
+        text-transform: uppercase;
+        padding-top: 3em;
+        }
+        .login{
+            width: 80%;
+            max-width: 400px;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            color: black;
+            margin-top: 2em;
+            margin-bottom: 2em;
+            padding: 1.5em;
+            border-radius: 2em;
+            background-color: rgba(149, 187, 212, 0.527);
+            font-size: x-large;
+        }
+        .caixa2{
+            width: 70px;
+            height: 30px;
+            color: white;
+            text-decoration: none;
+            background-color: #FB91FF;
+            padding: 5px;
+            border-radius: 10px;
+        
+        }
+        .gradient{
+            background-color: #FB91FF;
+            width: 150px;
+            display: flex;
+            justify-content: center;
+        }
+        .btn{
+            color: white;
+            text-decoration: none;
+            font-size: x-large;
+            padding: 8px 12px;
+            border-radius: 10px;
+            margin-top: 7px;
+        }
+        .botao{
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            margin: 0px 90px;
+            padding: 30px;
+        }
+        .semcadastro{
+            font-size: 15px;
+            margin: 0px 100px;
+        }
+        .rodape{
+            width: 98.5%;
+            height: 100px;
+            display: flex;
+            justify-content: space-between;
+            border: solid 1px #000000;
+            margin-top: 290px;
+        }
+        .div1 a, .div2 a{
+            font-size: 13px;
+            padding-bottom: 0.5em;
+        }
+        .div1{
+            width: 33%;
+            display: flex;
+            align-items: flex-start;
+            flex-direction: column;
+        
+        }
+        .div1 a{
+            color: #000000;
+            text-decoration: none;
+        }
+        .div2{
+            width: 33%;
+            display: flex;
+            align-items: flex-end;
+            flex-direction: column;
+        
+        }
+        .div2 a{
+            color: #000000;
+            text-decoration: none;
+        }
+        .logoimg{
+            width: 33%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+        .rodape .logo{
+            width: 5em;
+        }
+        .rodape img{
+            width: 1.5em;
+        }
+        .rodape2{
+            text-align: center;
+            border: solid 1px #000000;
+        }
+        footer{
+            margin-top: 2em;
+        }
+        .container{
+    width: 1366px;
+}
+.flex1{
+    width: 100%;
+    display: flex;
+    align-items: center;    
+    padding: 10px;
+}
+header{
+    width: 100%;
+    height: 50px;
+    margin-bottom: 2em;
+}
+header .logo{
+    width: 50px;
+}
+header ul{
+    width: 100%;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+}
+header ul img{
+    width: 20px;
+}
+header .caixa{
+    width: 80px;
+    height: 80px;
+    color: white;
+    text-decoration: none;
+    background-color: #FB91FF;
+    padding: 5px;
+    border-radius: 10px;
+}
+.container{
+    width: 1366px;
+}
+.flex1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    justify-content: space-around;  
+    padding: 10px;
+}
+.options{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+header{
+    width: 100%;
+    height: 80px;
+    margin-bottom: 2em;
+}
+header .logo{
+    width: 100px;
+}
+header ul{
+    width: 100%;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    font-size: 1.5em;
+}
+header ul img{
+    width: 40px;
+}
+header .caixa{
+    width: 70px;
+    height: 60px;
+    color: white;
+    text-decoration: none;
+    background-color: #FB91FF;
+    padding: 10px;
+    border-radius: 10px;
+}
+}
+
+
+
+/* Fim Login */
